<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.doranco.parcours.admin.CreationCompteChauffeur">

    <TextView
        android:id="@+id/creerCompteChauffeurTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creerSonCompteChauffeurTitre"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/entrezNomChauffeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/creerCompteChauffeurTitre"
        android:hint="@string/entrezNom"/>

    <EditText
        android:id="@+id/entrezPrenomChauffeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/entrezNomChauffeur"
        android:hint="@string/entrezPrenom"/>

    <EditText
        android:id="@+id/entrezMailChauffeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/entrezPrenomChauffeur"
        android:hint="@string/entrezMail"/>

    <EditText
        android:id="@+id/entrezTelephoneChauffeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/entrezMailChauffeur"
        android:hint="@string/entrezTel"
        android:inputType="phone"/>

    <Button
        android:id="@+id/continuerCreationCompteChauffeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Suivant"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>